--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -8,6 +8,14 @@
     <param-name>primefaces.THEME</param-name>
     <param-value>south-street</param-value>
   </context-param>
+  
+   <resource-ref>
+		<description>DB Connection</description>
+		<res-ref-name>jdbc/systmDB</res-ref-name>
+		<res-type>javax.sql.DataSource</res-type>
+		<res-auth>Container</res-auth>
+	</resource-ref>
+  
   <context-param>
     <param-name>maxSize</param-name>
     <param-value>100000</param-value>
